# nostr-py

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
bitchat_nostr/: __init__.py  embed.py  relay.py  types.py  wrap.py
tests/: test_embed.py
